--- a/page5.html
+++ b/page5.html
@@ -56,7 +56,7 @@
         const answers = [
           {
             action: "read_post",
-            detail: "사용자에게 45초간 게시글 표시 안내",
+            detail: "45초간 게시글 표시 안내",
             value: null
           }
         ];
