--- a/page1.html
+++ b/page1.html
@@ -5,47 +5,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>소셜 미디어 연구_p1</title>
 <style>
-  body {
-    margin: 0;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #f6f7f9;
-    font-family: system-ui,-apple-system,Segoe UI,Roboto,Apple SD Gothic Neo,Noto Sans KR,Arial,sans-serif;
-    color: #111827;
-  }
-  .popup {
-    background: #fff;
-    border-radius: 12px;
-    box-shadow: 0 4px 20px rgba(0,0,0,.1);
-    padding: 24px;
-    max-width: 320px;
-    width: 100%;
-    text-align: center;
-  }
-  h1 { font-size: 18px; margin: 0 0 12px; }
-  .row { display: flex; gap: 8px; justify-content: center; }
-  input[type="text"] {
-    flex: 1;
-    padding: 10px;
-    font-size: 18px;
-    text-align: center;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    letter-spacing: 4px;
-  }
-  button {
-    border: none;
-    background: #2563eb;
-    color: #fff;
-    padding: 10px 16px;
-    border-radius: 8px;
-    cursor: pointer;
-    font-weight: 600;
-  }
-  button:disabled { opacity: .5; cursor: not-allowed; }
-  .hint { font-size: 12px; color: #6b7280; margin-top: 8px; }
+  body{margin:0;height:100vh;display:flex;align-items:center;justify-content:center;background:#f6f7f9;font-family:system-ui,-apple-system,Segoe UI,Roboto,Apple SD Gothic Neo,Noto Sans KR,Arial,sans-serif;color:#111827}
+  .popup{background:#fff;border-radius:12px;box-shadow:0 4px 20px rgba(0,0,0,.1);padding:24px;max-width:320px;width:100%;text-align:center}
+  h1{font-size:18px;margin:0 0 12px}
+  .row{display:flex;gap:8px;justify-content:center}
+  input[type="text"]{flex:1;padding:10px;font-size:18px;text-align:center;border:1px solid #ccc;border-radius:8px;letter-spacing:4px}
+  button{border:none;background:#2563eb;color:#fff;padding:10px 16px;border-radius:8px;cursor:pointer;font-weight:600}
+  button:disabled{opacity:.5;cursor:not-allowed}
+  .hint{font-size:12px;color:#6b7280;margin-top:8px}
 </style>
 </head>
 <body>
@@ -60,72 +27,70 @@
 
 <!-- Firebase SDK -->
 <script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.23.0/firebase-app.js";
-  import { getFirestore, doc, setDoc } from "https://www.gstatic.com/firebasejs/10.23.0/firebase-firestore.js";
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.23.0/firebase-app.js";
+import { getFirestore, doc, setDoc } from "https://www.gstatic.com/firebasejs/10.23.0/firebase-firestore.js";
 
-  // ===== Firebase 설정 =====
-  const firebaseConfig = {
-    apiKey: "AIzaSyCEZEZItyfBTMg8tVWv3RQX19r6R-71pME",
-    authDomain: "to-be-a-master.firebaseapp.com",
-    projectId: "to-be-a-master",
-    storageBucket: "to-be-a-master.firebasestorage.app",
-    messagingSenderId: "223906864735",
-    appId: "1:223906864735:web:a04b3fdfa88e48a99905ea",
-    measurementId: "G-SXF1BMH4DB"
-  };
-  const app = initializeApp(firebaseConfig);
-  const db = getFirestore(app);
+const firebaseConfig = {
+  apiKey: "AIzaSyCEZEZItyfBTMg8tVWv3RQX19r6R-71pME",
+  authDomain: "to-be-a-master.firebaseapp.com",
+  projectId: "to-be-a-master",
+  storageBucket: "to-be-a-master.firebasestorage.app",
+  messagingSenderId: "223906864735",
+  appId: "1:223906864735:web:a04b3fdfa88e48a99905ea",
+  measurementId: "G-SXF1BMH4DB"
+};
+const app = initializeApp(firebaseConfig);
+const db = getFirestore(app);
 
-  // ===== 페이지 설정 ===== 
-  const PAGE = 1;
-  const NEXT_PAGE_URL = "page2.html";
+const PAGE = 1;
+const NEXT_PAGE_URL = "page2.html";
 
-  const qs = new URLSearchParams(location.search);
-  const pid = qs.get('pid') || localStorage.getItem('exp_pid') || '';
-  if (!pid) alert("PID가 없습니다!");
+const qs = new URLSearchParams(location.search);
+const pid = qs.get('pid') || localStorage.getItem('exp_pid') || '';
+if (!pid) alert("PID가 없습니다!");
 
-  function isValid(v) { return /^\d{4}$/.test(v); }
+function isValid(v) { return /^\d{4}$/.test(v); }
 
-  async function saveToFirestore(pid, idTail) {
-    try {
-      const docRef = doc(db, "sessions", pid);
-      await setDoc(docRef, { page_1: { P1_IDTAIL: idTail } }, { merge: true });
-    } catch (e) {
-      console.error("Firestore 저장 실패:", e);
-      throw e;
-    }
+async function saveToFirestore(pid, idTail) {
+  try {
+    const docRef = doc(db, "sessions", pid);
+    await setDoc(docRef, { page_1: { P1_IDTAIL: idTail } }, { merge: true });
+  } catch (e) {
+    console.error("Firestore 저장 실패:", e);
+    throw e;
+  }
+}
+
+document.addEventListener('DOMContentLoaded', () => {
+  const idInput = document.getElementById('idtail');
+  const submitBtn = document.getElementById('submitBtn');
+
+  function syncButton() {
+    submitBtn.disabled = !isValid(idInput.value.trim());
   }
 
-  document.addEventListener('DOMContentLoaded', () => {
-    const idInput = document.getElementById('idtail');
-    const submitBtn = document.getElementById('submitBtn');
-
-    function syncButton() {
-      submitBtn.disabled = !isValid(idInput.value.trim());
-    }
-
-    idInput.addEventListener('input', () => {
-      idInput.value = idInput.value.replace(/\D/g, '').slice(0, 4);
-      syncButton();
-    });
-
+  idInput.addEventListener('input', () => {
+    idInput.value = idInput.value.replace(/\D/g, '').slice(0, 4);
     syncButton();
-
-    submitBtn.addEventListener('click', async () => {
-      const idTail = idInput.value.trim();
-      if (!isValid(idTail)) return;
-
-      submitBtn.disabled = true;
-
-      try {
-        await saveToFirestore(pid, idTail);
-        location.href = `${NEXT_PAGE_URL}?pid=${encodeURIComponent(pid)}`;
-      } catch {
-        alert('데이터 저장에 실패했습니다. 인터넷 연결을 확인하고 다시 시도해주세요.');
-        submitBtn.disabled = false;
-      }
-    });
   });
+
+  syncButton();
+
+  submitBtn.addEventListener('click', async () => {
+    const idTail = idInput.value.trim();
+    if (!isValid(idTail)) return;
+
+    submitBtn.disabled = true;
+
+    try {
+      await saveToFirestore(pid, idTail);
+      location.href = `${NEXT_PAGE_URL}?pid=${encodeURIComponent(pid)}`;
+    } catch {
+      alert('데이터 저장에 실패했습니다. 인터넷 연결을 확인하고 다시 시도해주세요.');
+      submitBtn.disabled = false;
+    }
+  });
+});
 </script>
 </body>
 </html>
