--- a/page1.html
+++ b/page1.html
@@ -5,15 +5,30 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>소셜 미디어 연구_p1</title>
 <style>
-  body{margin:0;height:100vh;display:flex;align-items:center;justify-content:center;background:#f6f7f9;font-family:system-ui,-apple-system,Segoe UI,Roboto,Apple SD Gothic Neo,Noto Sans KR,Arial,sans-serif;color:#111827}
-  .popup{background:#fff;border-radius:12px;box-shadow:0 4px 20px rgba(0,0,0,.1);padding:24px;max-width:320px;width:100%;text-align:center}
-  h1{font-size:18px;margin:0 0 12px}
-  .row{display:flex;gap:8px;justify-content:center}
-  input[type="text"]{flex:1;padding:10px;font-size:18px;text-align:center;border:1px solid #ccc;border-radius:8px;letter-spacing:4px}
-  button{border:none;background:#2563eb;color:#fff;padding:10px 16px;border-radius:8px;cursor:pointer;font-weight:600}
-  button:disabled{opacity:.5;cursor:not-allowed}
-  .hint{font-size:12px;color:#6b7280;margin-top:8px}
+  input[type="number"] {
+    width: 40%; /* 기존보다 좁게 */
+    padding: 0.5em;
+    font-size: 1em;
+    box-sizing: border-box;
+  }
+
+  button {
+    width: 25%; /* 기존보다 조금 넓게 */
+    padding: 0.5em;
+    font-size: 1em;
+    box-sizing: border-box;
+  }
+
+  /* 모바일 환경 대응 */
+  @media (max-width: 480px) {
+    input[type="number"], button {
+      width: auto; /* 화면 크기에 맞춰 유동적으로 */
+      display: inline-block;
+      margin: 0.2em 0;
+    }
+  }
 </style>
+
 </head>
 <body>
 <div class="popup">
