--- a/page2.html
+++ b/page2.html
@@ -45,79 +45,70 @@
 </main>
 
 <script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.0/firebase-app.js";
-import { 
-  getFirestore, 
-  doc, 
-  setDoc, 
-  serverTimestamp 
-} from "https://www.gstatic.com/firebasejs/11.0.0/firebase-firestore.js";
+  /***** ▼ Firebase 초기 설정 ▼ *****/
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.0/firebase-app.js";
+  import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/11.0.0/firebase-firestore.js";
 
-const firebaseConfig = {
-  apiKey: "AIzaSyCEZEZItyfBTMg8tVWv3RQX19r6R-71pME",
-  authDomain: "to-be-a-master.firebaseapp.com",
-  projectId: "to-be-a-master",
-  storageBucket: "to-be-a-master.firebasestorage.app",
-  messagingSenderId: "223906864735",
-  appId: "1:223906864735:web:a04b3fdfa88e48a99905ea",
-  measurementId: "G-SXF1BMH4DB"
-};
+  const firebaseConfig = {
+    apiKey: "AIzaSyCEZEZItyfBTMg8tVWv3RQX19r6R-71pME",
+    authDomain: "to-be-a-master.firebaseapp.com",
+    projectId: "to-be-a-master",
+    storageBucket: "to-be-a-master.firebasestorage.app",
+    messagingSenderId: "223906864735",
+    appId: "1:223906864735:web:a04b3fdfa88e48a99905ea",
+    measurementId: "G-SXF1BMH4DB"
+  };
 
-const app = initializeApp(firebaseConfig);
-const db = getFirestore(app);
+  const app = initializeApp(firebaseConfig);
+  const db = getFirestore(app);
+  /***** ▲ Firebase 설정 끝 ▲ *****/
 
-const PAGE = 2;
-const NEXT_PAGE_URL = "page3.html";
+  /***** ▼ 페이지 설정 ▼ *****/
+  const PAGE = 2;
+  const NEXT_PAGE_URL = "page3.html";
+  /***** ▲ 설정 끝 ▲*****/
 
-(function(){
-  const qs = new URLSearchParams(location.search);
-  const pid = qs.get('pid') || localStorage.getItem('exp_pid') || '';
-  if (!pid) {
-    alert("PID가 없습니다. 페이지를 다시 확인하세요.");
-    return;
-  }
+  (function(){
+    const qs = new URLSearchParams(location.search);
+    const pid = qs.get('pid') || localStorage.getItem('exp_pid') || '';
+    const nextBtn = document.getElementById('nextBtn');
+    let sending = false;
 
-  const nextBtn = document.getElementById('nextBtn');
-  if (!nextBtn) return;
-
-  let sending = false;
-
-  // ✅ 한 참가자 문서에 페이지별 답변 병합 저장 
-  async function sessionUpsert() {
-    try {
-      const answers = [
-        { question: "연구 설명 확인", answer: "예" },
-        { question: "연구 안내 확인", answer: "예" },
-        { question: "연구 대상자 관련 자료 처리 확인", answer: "예" }
-      ];
-
-      const docRef = doc(db, "responses", pid);
-
-      // merge: true → 기존 문서 유지, 해당 페이지만 업데이트
-      await setDoc(docRef, {
-        [`page_${PAGE}`]: {
-          answers,
-          timestamp: serverTimestamp()
-        }
-      }, { merge: true });
-
-      console.log(`✅ Firestore 저장 완료 (page ${PAGE})`);
-    } catch (e) {
-      console.error("❌ Firestore 저장 실패:", e);
+    // ✅ Firestore에 세션 정보 저장
+    async function sessionUpsert() {
+      try {
+        await addDoc(collection(db, "responses"), {
+          pid,
+          page: PAGE,
+          answers: [],
+          timestamp: new Date()
+        });
+        console.log("✅ Firestore 저장 완료 (page 2)");
+      } catch (e) {
+        console.error("❌ Firestore 저장 실패:", e);
+      }
     }
-  }
 
-  nextBtn.addEventListener('click', async () => {
-    if (sending) return;
-    sending = true;
-    nextBtn.disabled = true;
-    await sessionUpsert();
-    const next = `${NEXT_PAGE_URL}?pid=${encodeURIComponent(pid)}`;
-    location.href = next;
-  });
+    nextBtn.addEventListener('click', async () => {
+      if (sending) return;
+      sending = true;
+      nextBtn.disabled = true;
 
-})();
+      await sessionUpsert();
+
+      const next = `${NEXT_PAGE_URL}?pid=${encodeURIComponent(pid)}`;
+      location.href = next;
+    });
+
+    // ✅ 페이지 닫기 대비 sendBeacon은 Firestore에서는 불필요하지만,
+    // 단순 로깅 용도로 남기고 싶다면 Firestore에 비동기 추가 가능
+    window.addEventListener('beforeunload', () => {
+      // Firestore는 navigator.sendBeacon으로 직접 호출 불가능함.
+      // 따라서 별도 처리가 필요하지만, 여기선 생략 가능.
+    });
+  })();
 </script>
+
 
 </body>
 </html>
